mobile sidebar menu

--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -78,12 +78,13 @@
          <div class="swiper-wrapper">
           <div class="swiper-slide">
             <nav class="main_nav_underline">
-              <ul>
-                <li><a href="/"><img src="/images/icons/gray/home.png" alt="" title="" /><span>Home</span></a></li>
-                <li><a href="/feed"><img src="/images/icons/gray/mobile.png" alt="" title="" /><span>Feed</span></a></li>
-                <li><a href="/templates"><img src="/images/icons/gray/features.png" alt="" title="" /><span>Templates</span></a></li>
-                <li><a href="/blog"><img src="/images/icons/gray/features.png" alt="" title="" /><span>Blog</span></a></li>
+              <ul style="padding:20px 0px 20px 0px">
+                <li><a href="/"><img src="{{{cdn}}}/mobili/images/icons/gray/home.png" alt="Vertex 360" title="" /><span>Home</span></a></li>
+                <li><a href="/feed"><img src="{{{cdn}}}/mobili/images/icons/gray/categories.png" alt="Vertex 360" title="" /><span>Feed</span></a></li>
+                <li><a href="/templates"><img src="{{{cdn}}}/mobili/images/icons/gray/photos.png" alt="Vertex 360" title="" /><span>Templates</span></a></li>
+                <li><a href="/blog"><img src="{{{cdn}}}/mobili/images/icons/gray/blog.png" alt="" title="Vertex 360" /><span>Blog</span></a></li>
               </ul>
+              <img style="width:160px;margin:20px 0px 0px 12px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
             </nav>
           </div>
         </div>
