--- a/medium/widget/store.mustache
+++ b/medium/widget/store.mustache
@@ -11,6 +11,21 @@
 	<div class="row justify-content-between">
 		<div class="col-md-8">
       <h1>Store</h1>
+
+      {{#items}}
+      <div class="mt-2 d-flex justify-content-between post-preview">
+        <div class="pr-4">
+          <div class="card-text text-muted small">
+              <a href="#">{{ name }}</a>
+              <span style="margin:6px">&middot;</span>
+              <span>${{ price }}</span>
+          </div>
+          <p class="text-muted">{{{description}}}></p>
+        </div>
+      </div>
+
+      {{/items}}
+
 		</div>
 	</div>
 </div>
