link to item page

--- a/medium/widget/item.mustache
+++ b/medium/widget/item.mustache
@@ -15,7 +15,7 @@
       <div class="mt-2 d-flex justify-content-between post-preview">
         <div class="pr-4">
           <div class="card-text text-muted small">
-              <a href="/item/{{item.id}}">{{ item.name }}</a>
+              <a href="/widget/item/{{item.id}}">{{ item.name }}</a>
               <span style="margin:6px">&middot;</span>
               <span>${{ item.price }}</span>
           </div>
