link to widget page

--- a/medium/widget/store.mustache
+++ b/medium/widget/store.mustache
@@ -16,7 +16,7 @@
       <div class="mt-2 d-flex justify-content-between post-preview">
         <div class="pr-4">
           <div class="card-text text-muted small">
-              <a href="/item/{{id}}">{{ name }}</a>
+              <a href="/widget/item/{{id}}">{{ name }}</a>
               <span style="margin:6px">&middot;</span>
               <span>${{ price }}</span>
           </div>
