--- a/medium/widget/item.mustache
+++ b/medium/widget/item.mustache
@@ -51,7 +51,7 @@
 		      return actions.order.create({
 		        purchase_units: [{
 		          amount: {
-		            value: '3.00'
+		            value: '2.00'
 		          }
 		        }]
 		      });
@@ -74,6 +74,7 @@
 								console.log('SUCCESS - ' + JSON.stringify(resp))
 							},
 							error: function(resp){
+                console.log('ERROR - ' + JSON.stringify(resp))
 								alert('ERR - ' + resp)
 							}
 						})
