--- a/medium/widget/feed.mustache
+++ b/medium/widget/feed.mustache
@@ -70,10 +70,10 @@
                       <div class="bg-white mb-4 thread-preview">
                         <div class="thread-preview-container">
                           <a target="_blank" href="{{subject.url}}">
-                            <img src="{{subject.image}}=s240-c" />
+                            <img src="{{subject.image}}=s120-c" />
                           </a>
                           <a style="color:#333" target="_blank" href="{{{subject.url}}}">
-                            <h4>{{subject.title}}</h4>
+                            <h4 class="mt-2">{{subject.title}}</h4>
                           </a>
                           <p><a style="color:#7d7d7d" target="_blank" href="{{{subject.url}}}">{{subject.preview}}</a></p>
                           <div class="mb-0 mb-2" style="text-align:right">
