--- a/medium/widget/feed.mustache
+++ b/medium/widget/feed.mustache
@@ -73,7 +73,7 @@
                             <img src="{{subject.image}}=s120-c" />
                           </a>
                           <a style="color:#333" target="_blank" href="{{{subject.url}}}">
-                            <h4 class="mt-2">{{subject.title}}</h4>
+                            <h4 class="mt-2" style="font-size:1.25rem">{{subject.title}}</h4>
                           </a>
                           <p><a style="color:#7d7d7d" target="_blank" href="{{{subject.url}}}">{{subject.preview}}</a></p>
                           <div class="mb-0 mb-2" style="text-align:right">
