show item image

--- a/medium/widget/store.mustache
+++ b/medium/widget/store.mustache
@@ -16,11 +16,11 @@
       <div class="mt-2 d-flex justify-content-between post-preview">
         <div class="pr-4">
           <div class="card-text text-muted small">
-              <a href="/widget/item/{{id}}">{{ name }}</a>
-              <span style="margin:6px">&middot;</span>
-              <span>${{ price }}</span>
+            <img src="{{{image}}}=s120-c" /><br />
+            <a href="/widget/item/{{id}}">{{ name }}</a>
+            <span style="margin:6px">&middot;</span>
+            <span>${{ price }}</span>
           </div>
-          <p class="text-muted">{{{description}}}</p>
         </div>
       </div>
 
