--- a/medium/widget/store.mustache
+++ b/medium/widget/store.mustache
@@ -4,28 +4,31 @@
   <title>Vertex 360</title>
   <meta name="description" content="" />
   {{>head}}
+  <style>
+    .item-preview a {
+      text-decoration: none;
+    }
+  </style>
 </head>
 
 <body style="padding-top:0px">
 <div class="container pt-2 pb-4">
 	<div class="row justify-content-between">
 		<div class="col-md-8">
-      <h1>Store</h1>
+      <h1 class="mb-4">Store</h1>
 
       {{#items}}
-      <div class="mt-2 d-flex justify-content-between post-preview">
-        <div class="pr-4">
-          <div class="card-text text-muted small">
-            <a href="/widget/item/{{id}}">
-              <img src="{{{image}}}=s120-c" />
-            </a>
-            <a style="font-size:18px;font-weight:600" href="/widget/item/{{id}}">
-              {{ name }}
-              <span style="margin:6px">&middot;</span>
-              <span>${{ price }}</span>
-            </a>
-          </div>
-        </div>
+      <div class="item-preview">
+        <a href="/widget/item/{{id}}">
+          <img style="border:1px solid #ededed" src="{{{image}}}=s120-c" />
+        </a>
+        <a style="font-size:18px;font-weight:600" href="/widget/item/{{id}}">
+          {{ name }}
+          <span style="margin:6px">&middot;</span>
+          <span>${{ price }}</span>
+        </a>
+        <p>{{description}}</p>
+
       </div>
 
       {{/items}}
