item preview styling

--- a/medium/widget/store.mustache
+++ b/medium/widget/store.mustache
@@ -22,13 +22,13 @@
         <a href="/widget/item/{{id}}">
           <img style="border:1px solid #ededed" src="{{{image}}}=s120-c" />
         </a>
-        <div>
+        <div class="ml-2">
           <a style="font-size:18px;font-weight:600" href="/widget/item/{{id}}">
             {{ name }}
             <span style="margin:6px">&middot;</span>
             <span>${{ price }}</span>
           </a>
-          <p>{{description}}</p>
+          <p><a style="text-decoration:none;color:#212529;" href="#">{{description}}</a></p>
         </div>
       </div>
 
