--- a/medium/widget/item.mustache
+++ b/medium/widget/item.mustache
@@ -10,18 +10,16 @@
 <div class="container pt-2 pb-4">
 	<div class="row justify-content-between">
 		<div class="col-md-8">
-      <h1>Item</h1>
+      <h1>{{ item.name }}</h1>
+      <span>${{ item.price }}</span>
+      <hr />
 
       <div class="mt-2 d-flex justify-content-between post-preview">
-        <div class="pr-4">
-          <div class="card-text text-muted small">
-              <img src="{{{item.image}}}=s512" /><br />
-              <h3>{{ item.name }}</h3>
-              <span>${{ item.price }}</span>
-          </div>
-          <p class="text-muted">{{{item.description}}}</p>
-          <div id="paypal-button-container"></div>
+        <div>
+            <img src="{{{item.image}}}=s512" />
+            <p class="text-muted">{{{item.description}}}</p>
         </div>
+        <div id="paypal-button-container"></div>
       </div>
 
 		</div>
