--- a/medium/widget/item.mustache
+++ b/medium/widget/item.mustache
@@ -14,9 +14,9 @@
       <span>${{ item.price }}</span>
       <hr />
 
-      <div class="mt-2 d-flex justify-content-between post-preview">
+      <div>
         <div>
-            <img src="{{{item.image}}}=s512" />
+            <img style="max-width:50%" src="{{{item.image}}}=s512" />
             <p class="text-muted">{{{item.description}}}</p>
         </div>
         <div id="paypal-button-container"></div>
