--- a/medium/widget/item.mustache
+++ b/medium/widget/item.mustache
@@ -16,7 +16,7 @@
 
       <div>
         <div>
-            <img style="max-width:50%" src="{{{item.image}}}=s512" />
+            <img class="mb-3" style="max-width:50%" src="{{{item.image}}}=s512" />
             <p class="text-muted">{{{item.description}}}</p>
         </div>
         <div id="paypal-button-container"></div>
