--- a/medium/admin/pages.mustache
+++ b/medium/admin/pages.mustache
@@ -41,7 +41,7 @@
     input {
       box-shadow: none !important;
       padding: 0px !important;
-      margin: 0px !important;
+      margin: 0px 0px 16px 0px !important;
       border: none !important;
       line-height: 40px !important;
       height: 40px !important;
