google meta tag

--- a/medium/partials/head.mustache
+++ b/medium/partials/head.mustache
@@ -2,6 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no" name="viewport" />
 <meta name="p:domain_verify" content="596f692efd9f79005e2d49e2151d356a"/>
+<meta name="google-signin-client_id" content="684486304077-s4rcr24i6209vpk0g4380saiqobalcma.apps.googleusercontent.com">
 
 <link rel="icon" href="https://lh3.googleusercontent.com/5SVrpLI9utkuVJbQb48cpD3tar59mgWaWSAM73Ghj8dxFJMD2UOzkhO5ptWDd2uV2eqgSvDCSa-Ad8aOrygXx6nv=s32-c" type="image/png" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Source+Sans+Pro:400,600,700">
