--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -3,6 +3,8 @@
 <head>
   <title>Vertex 360</title>
   <meta name="description" content="" />
+  <meta name="google-signin-client_id" content="684486304077-iocjpskcqkc9aq8lo94t3j6o1lsiphte.apps.googleusercontent.com">
+
   {{>head}}
 </head>
 
@@ -13,6 +15,7 @@
       <div id="thread-container"></div>
       <textarea id="text-area-comment" class="form-control mt-4 mb-3" rows="4" style="padding:0px 8px;resize:none"></textarea>
       <button id="btn-submit-comment" class="mb-5 btn btn-success">Add Comment</button>
+      <div class="g-signin2" data-onsuccess="onGoogleSignIn"></div>
       <div id="comments-container"></div>
 		</div>
 	</div>
@@ -143,6 +146,16 @@
         })
       })
     })()
+  </script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script>
+    function onGoogleSignIn(googleUser) {
+      var profile = googleUser.getBasicProfile();
+      console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+      console.log('Name: ' + profile.getName());
+      console.log('Image URL: ' + profile.getImageUrl());
+      console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+    }
   </script>
 </body>
 </html>
