--- a/medium/partials/auth.mustache
+++ b/medium/partials/auth.mustache
@@ -10,7 +10,9 @@
       <div class="modal-body">
         <input id="input-login-email" style="background:#f9f9f9;border:none" class="form-control mb-3" type="text" placeholder="Email" />
         <input id="input-login-password" style="background:#f9f9f9;border:none" class="form-control mb-3" type="password" placeholder="Password" />
-        <button id="input-login" style="width:100%" type="button" class="btn btn-primary btn-lg">Login</button>
+        <button id="input-login" style="width:100%" type="button" class="btn btn-primary btn-lg mb-3">Login</button>
+        <h5 class="text-center">OR</h5>
+        <div id="google-login"></div>
         <hr />
       </div>
       <div class="text-center mb-4" style="padding:1rem">
@@ -33,7 +35,9 @@
         <input id="input-register-name" style="background:#f9f9f9;border:none" class="form-control mb-3" type="text" placeholder="Name" />
         <input id="input-register-email" style="background:#f9f9f9;border:none" class="form-control mb-3" type="text" placeholder="Email" />
         <input id="input-register-password" style="background:#f9f9f9;border:none" class="form-control mb-3" type="password" placeholder="Password" />
-        <button id="input-register" style="width:100%" type="button" class="btn btn-primary btn-lg">REGISTER</button>
+        <button id="input-register" style="width:100%" type="button" class="btn btn-primary btn-lg mb-3">REGISTER</button>
+        <h5 class="text-center">OR</h5>
+        <div id="google-register"></div>
         <hr />
       </div>
       <div class="text-center mb-4" style="padding:1rem">
