--- a/medium/about.mustache
+++ b/medium/about.mustache
@@ -511,15 +511,48 @@
             if (data.user != null) // already signed in
               return
 
-            var profile = googleUser.getBasicProfile();
-            console.log('Logged in as: ' + profile.getName());
-            console.log('Name: ' + profile.getName());
-            console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+            var now = Date.now()
+            var delta = now-data.timestamp
+            if (delta < 5000)
+              return
 
-            var nameParts = profile.getName().split(' ')
-            var visitor = {
+            var profile = googleUser.getBasicProfile()
+            console.log('Logged in as: ' + profile.getName())
+            console.log('Name: ' + profile.getName())
+            console.log('Email: ' + profile.getEmail()) // This is null if the 'email' scope is not present.
+
+            var googleRegisterProfile = {
               auth: 'register',
               fullName: profile.getName(),
+              email: profile.getEmail().toLowerCase()
+            }
+
+            window.vertexLib.postRequest('/account/googleauth', visitor, function(err, response){
+              if (err){
+                alert(err.message)
+                return
+              }
+
+              window.location.href = '/templates'
+            })
+          }
+
+          function onLoginSuccess(googleUser){
+            var data = window.__PRELOADED__
+            if (data.user != null) // already signed in
+              return
+
+            var now = Date.now()
+            var delta = now-data.timestamp
+            if (delta < 5000)
+              return
+
+            var profile = googleUser.getBasicProfile()
+            console.log('Login Successful: ' + profile.getName())
+            console.log('Name: ' + profile.getName())
+            console.log('Email: ' + profile.getEmail()) // This is null if the 'email' scope is not present.
+            var googleLoginProfile = {
+              auth: 'login',
               email: profile.getEmail().toLowerCase()
             }
 
@@ -529,19 +562,8 @@
             //     return
             //   }
             //
-            //   window.location.href = '/templates'
+            //   window.location.href = '/me'
             // })
-          }
-
-          function onLoginSuccess(googleUser){
-            var data = window.__PRELOADED__
-            if (data.user != null) // already signed in
-              return
-
-            var profile = googleUser.getBasicProfile();
-            console.log('Login Successful: ' + profile.getName());
-            console.log('Name: ' + profile.getName());
-            console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
           }
 
           function onFailure(error) {
