import google auth script

--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -145,5 +145,8 @@
       })
     })()
   </script>
+  <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+  <script type="text/javascript" src="{{{cdn}}}/scripts/googleauth.js"></script>
+
 </body>
 </html>
