--- a/medium/widget/feed.mustache
+++ b/medium/widget/feed.mustache
@@ -136,5 +136,7 @@
       <script type="text/javascript" src="{{{cdn}}}/scripts/auth.js"></script>
       <script type="text/javascript" src="{{{cdn}}}/scripts/referrer.js"></script>
 
+      <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+      <script type="text/javascript" src="{{{cdn}}}/scripts/googleauth.js"></script>
     </body>
 </html>
