--- a/medium/widget/store.mustache
+++ b/medium/widget/store.mustache
@@ -53,5 +53,7 @@
   {{>scripts}}
   <script type="text/javascript" src="{{{cdn}}}/js/mustache.js"></script>
 
+  <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+  <script type="text/javascript" src="{{{cdn}}}/scripts/googleauth.js"></script>
 </body>
 </html>
