--- a/medium/partials/auth.mustache
+++ b/medium/partials/auth.mustache
@@ -1,6 +1,6 @@
 <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm" role="document">
-    <div class="modal-content" style="border-radius:4px">
+    <div class="modal-content" style="border-radius:4px;max-width:300px;margin:auto">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Login</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -24,7 +24,7 @@
 
 <div class="modal fade" id="register-modal" tabindex="-1" role="dialog" aria-labelledby="registerModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm" role="document">
-    <div class="modal-content" style="border-radius:4px">
+    <div class="modal-content" style="border-radius:4px;max-width:300px;margin:auto">
       <div class="modal-header">
         <h5 class="modal-title" id="registerModalLabel">Join</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
