--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -12,8 +12,10 @@
 	<div class="row justify-content-between">
 		<div class="col-md-8">
       <div id="thread-container"></div>
+      {{#user}}
       <textarea id="text-area-comment" class="form-control mt-4 mb-3" rows="4" style="padding:0px 8px;resize:none"></textarea>
       <button id="btn-submit-comment" class="mb-5 btn btn-success">Add Comment</button>
+      {{/user}}
       <div id="comments-container"></div>
 		</div>
 	</div>
