--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -20,7 +20,9 @@
 
       {{^user}}
       <div>
-        Please register or login to submit a comment:
+        Please join or login to submit a comment:
+        <button type="button" class="btn btn-primary btn-lg mb-3" data-toggle="modal" data-target="#register-modal">JOIN</button>
+        <button type="button" class="btn btn-primary btn-lg mb-3">LOGIN</button>
       </div>
       {{/user}}
 
