join and login buttons

--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -20,9 +20,9 @@
 
       {{^user}}
       <div>
-        Please join or login to submit a comment:
-        <button type="button" class="btn btn-primary btn-lg mb-3" data-toggle="modal" data-target="#register-modal">JOIN</button>
-        <button type="button" class="btn btn-primary btn-lg mb-3">LOGIN</button>
+        Please join or login to submit a comment:<br />
+        <button type="button" class="btn btn-primary mb-3" data-toggle="modal" data-target="#register-modal">JOIN</button>
+        <button type="button" class="btn mb-3" data-toggle="modal" data-target="#login-modal">LOGIN</button>
       </div>
       {{/user}}
 
