--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -21,8 +21,8 @@
       {{^user}}
       <div>
         Please join or login to submit a comment:<br />
-        <button type="button" class="btn btn-primary mb-3" data-toggle="modal" data-target="#register-modal">JOIN</button>
-        <button type="button" class="btn mb-3" data-toggle="modal" data-target="#login-modal">LOGIN</button>
+        <button type="button" class="btn btn-primary mb-3 mt-2 mr-2" data-toggle="modal" data-target="#register-modal">JOIN</button>
+        <button type="button" class="btn mb-3 mt-2" data-toggle="modal" data-target="#login-modal">LOGIN</button>
       </div>
       {{/user}}
 
