--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -19,7 +19,7 @@
       {{/user}}
 
       {{^user}}
-      <div>
+      <div style="background:#fffffa;padding:12px">
         Please join or login to submit a comment:<br />
         <button type="button" class="btn btn-primary mb-3 mt-2 mr-2" data-toggle="modal" data-target="#register-modal">JOIN</button>
         <button type="button" class="btn mb-3 mt-2" data-toggle="modal" data-target="#login-modal">LOGIN</button>
