--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -19,10 +19,10 @@
       {{/user}}
 
       {{^user}}
-      <div style="background:#fffffa;padding:12px">
+      <div class="mt-2 mb-2" style="background:#f9f9f9;padding:16px">
         Please join or login to submit a comment:<br />
-        <button type="button" class="btn btn-primary mb-3 mt-2 mr-2" data-toggle="modal" data-target="#register-modal">JOIN</button>
-        <button type="button" class="btn mb-3 mt-2" data-toggle="modal" data-target="#login-modal">LOGIN</button>
+        <button type="button" class="btn btn-primary mb-0 mt-2 mr-2" data-toggle="modal" data-target="#register-modal">JOIN</button>
+        <button type="button" class="btn mb-0 mt-2" data-toggle="modal" data-target="#login-modal">LOGIN</button>
       </div>
       {{/user}}
 
