--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -8,11 +8,11 @@
 </head>
 
 <body style="padding-top:0px">
-<div class="container pt-2 pb-4">
+<div class="container pt-0 pb-4">
 	<div class="row justify-content-between">
 		<div class="col-md-8">
       {{#user}}
-      <textarea id="text-area-comment" class="form-control mt-4 mb-3" rows="4" style="padding:0px 8px;resize:none"></textarea>
+      <textarea id="text-area-comment" class="form-control mt-0 mb-3" rows="4" style="padding:0px 8px;resize:none"></textarea>
       <button id="btn-submit-comment" class="mb-5 btn btn-success">Add Comment</button>
       {{/user}}
 
@@ -24,7 +24,20 @@
       </div>
       {{/user}}
 
-      <div id="comments-container"></div>
+      <div id="comments-container">
+        {{#comments}}
+        <div class="mt-2 d-flex justify-content-between post-preview">
+          <div class="pr-4">
+            <div class="card-text text-muted small">
+                <a href="#">{{ profile.username }}</a>
+                <span style="margin:6px">&middot;</span>
+                <span>{{ dateString }}</span>
+            </div>
+            <p class="text-muted">{{{text}}}</p>
+          </div>
+        </div>
+        {{/comments}}
+      </div>
 		</div>
 	</div>
 </div>
@@ -62,10 +75,6 @@
       var comments = []
 
       var reloadUI = function(){
-        // var tplThread = $('#tpl-thread').html()
-        // var threadHtml = Mustache.render(tplThread, thread)
-        // $('#thread-container').html(threadHtml)
-
         var tpl = $('#tpl-comment').html()
         var commentsHtml = ''
         comments.forEach(function(comment){
