--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -43,7 +43,7 @@
 </div>
   {{>footer}}
   {{>auth}}
-  <a id="nav-register" style="display:none;background:#03a87c;color:#fff !important" class="nav-link" href="#" data-toggle="modal" data-target="#register-modal">JOIN VERTEX</a>
+  <a id="nav-register" style="display:none;" class="nav-link" href="#" data-toggle="modal" data-target="#register-modal">JOIN</a>
 
 
   <script type="text/template" id="tpl-comment">
