import google auth

--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -124,7 +124,6 @@
       <script type="text/javascript" src="{{{cdn}}}/snap/js/feather.min.js"></script>
       <script type="text/javascript" src="{{{cdn}}}/snap/js/slick.min.js"></script>
       <script type="text/javascript" src="{{{cdn}}}/snap/js/scripts.js"></script>
-      <script type="text/javascript" src="{{{cdn}}}/scripts/auth.js"></script>
       <script type="text/javascript" src="{{{cdn}}}/scripts/referrer.js"></script>
       {{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
 
@@ -238,5 +237,9 @@
           });
         })()
       </script>
+
+      <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+      <script type="text/javascript" src="{{{cdn}}}/scripts/googleauth.js"></script>
+      <script type="text/javascript" src="{{{cdn}}}/scripts/auth.js"></script>
     </body>
 </html>
