--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -164,7 +164,6 @@
       <script type="text/javascript" src="{{{cdn}}}/snap/js/feather.min.js"></script>
       <script type="text/javascript" src="{{{cdn}}}/snap/js/slick.min.js"></script>
       <script type="text/javascript" src="{{{cdn}}}/snap/js/scripts.js"></script>
-      <script type="text/javascript" src="{{{cdn}}}/scripts/auth.js"></script>
       <script type="text/javascript" src="{{{cdn}}}/scripts/referrer.js"></script>
 
       <script>
@@ -228,5 +227,8 @@
         })()
       </script>
 
+      <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+      <script type="text/javascript" src="{{{cdn}}}/scripts/googleauth.js"></script>
+      <script type="text/javascript" src="{{{cdn}}}/scripts/auth.js"></script>
     </body>
 </html>
